--- a/src/Components/HeroComponent/HeroStyles.css
+++ b/src/Components/HeroComponent/HeroStyles.css
@@ -3,12 +3,13 @@
     padding: 1.5rem 1rem;
     min-height: 80vh;
     margin-bottom: 20px;
+
 }
 
 .hero .container{
     max-width: 90%;
     padding: 0 1rem;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .hero .content{
@@ -23,6 +24,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-left: 20px;
+    animation: slideIn 1s forwards;
 }
 
 
@@ -31,7 +34,37 @@
     height: 70vh;
     display: flex;
     justify-content: center;
+    margin-right: 20px;
+    animation: slideIn 1s forwards;
 }
+
+.hero .col-1 {
+  animation: slideIn 1s forwards;
+  animation-delay: 0.5s; 
+  margin-left: 20px;
+  transform: translateX(-120%);
+}
+
+.hero .col-2 {
+  animation: slideIn 1s forwards;
+  animation-delay: 0.5s; 
+  margin-left: 20px;
+  transform: translateX(120%);
+}
+
+
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 
 @media screen and (max-width: 820px) {
   .hero .content {
