--- a/src/Components/Projects/ProjectsStyles.css
+++ b/src/Components/Projects/ProjectsStyles.css
@@ -108,8 +108,9 @@
     cursor: pointer;
     font-size: 1rem;
     font-weight: 900;
-    border-radius: 0.375rem;
+    border-radius: 5px;
     padding: .75rem;
+    width: 100%;
 
 }
 
